# RSCommendation-backend

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: manual-deploy.yml
src/: config.py  dependencies.py  firebase.py
src/ml/: nearest_neighbor.py
src/models/: category.py  recommendations.py  user.py
src/routers/: derive_preferences.py  health.py  recommendations.py
src/services/: __init__.py  collaborative_recommendations.py  derive_preferences.py  recommendations.py  user_vectors.py
tools/: build_historical_profiles.py  seed_activities.py  seed_categories.py
