[project]
name = "rscommendation-backend"
version = "0.1.0"
description = "The official Radboud Sport & Culture recommendation application backend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "firebase-admin>=7.4.0",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.45.0",
]
